# urlshorter-fastapi

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 887326bb98bc_initial_migration.py
app/: main.py
app/core/: config.py  security.py
app/crud/: __init__.py  base.py  crud_url.py  crud_user.py
app/db/: session.py
app/models/: base.py  url.py  user.py
app/schemas/: url.py  user.py
tests/: conftest.py  test_main.py  test_models.py
tests/crud/: test_url.py  test_user.py
